--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Coinz</string>
     <string name="action_settings">Settings</string>
     <string name="access_token">pk.eyJ1IjoiczE2MDE4NDciLCJhIjoiY2puMXBoeXplMnNicTNxbzhhYWFmbnhqZyJ9.hTS5UNqpWkpg2Fcy4z4fAQ</string>
+    <string name="title_activity_signup">SignupActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
+    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
+    <string name="title_activity_bank">Bank</string>
+    <string name="title_activity_wallet">WalletActivity</string>
+    <string name="title_activity_trophies">TrophiesActivity</string>
+    <string name="title_activity_monies_pop_up">MoniesPopUp</string>
 </resources>
