WOWOWOWOWOWOWOWOW DONEDONEDONEDONEDONE my head hurts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="title_activity_wallet">WalletActivity</string>
     <string name="title_activity_trophies">TrophiesActivity</string>
     <string name="title_activity_monies_pop_up">MoniesPopUp</string>
+    <string name="title_activity_bank_pop_up">BankPopUp</string>
+    <string name="title_activity_listview">Listview</string>
+    <string name="title_activity_transferring_coins">TransferringCoins</string>
+
 </resources>
